# Procy

./: .gitignore  README.md  procy_ann_train.jsonl  pyproject.toml
procy/: __init__.py  agent.py  cli.py  io.py  store.py  terminal.py  ui.py
scripts/: ann_search.py  ann_search_best.py  eval_ann.py  primes.py  run_evolve_pipeline.py  train_proxy.py
